--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="dark-theme">
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
